cmake_minimum_required(VERSION 3.2)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmakego)
include(cmakego)
option(USE_EGL "Use OpenGL ES instead of OpenGL 3.3")
#option(UTHREE "Build micro THREE")
add_subdirectory(include/SOIL)
add_definitions(--std=c++11)
usepackage(assimp eigen glew glfw REQUIRED)
usepackage(gstreamer)
include_directories(include)
if(USE_EGL)
link_libraries(p::eigen p::egl p::opengles2 SOIL)
add_definitions(-DUSE_EGL)
else()
link_libraries(p::eigen p::glew p::glfw SOIL)
endif()
add_subdirectory(src)


